Adding cloud station and whatsapp

--- a/install.yml
+++ b/install.yml
@@ -29,7 +29,9 @@
     - evernote
     - visual-studio-code
     - microsoft-office
+    - synology-cloud-station-drive
     - anaconda
     - zotero
     - skim
     - basictex
+    - whatsapp
